--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@ body {
 
 h1 {
     font-family: 'Fredoka One', cursive;
-    color:  #cc0000;
+    color: #cc0000;
     background-color: #f4cccc;
 }
 
 
 h2 {
     font-family: 'Nunito', sans-serif;
-     color:  #cc0000;
+    color: #cc0000;
 }
 
 
 p {
     font-size: 18px;
     font-family: 'Nunito', sans-serif;
-     color:  #cc0000;
+    color: #cc0000;
 }
 
 /*
@@ -33,6 +33,7 @@ p {
 /**************************************************/
 /* // Medium devices (tablets, 768px and up) */
 /**************************************************/
+/*
 @media (min-width: 768px) {
     body {
      background-color: yellow;
@@ -42,6 +43,7 @@ p {
      content: "'md': lig el. over 768px. ";
    }
 }
+*/
 
 /* END "md-" 768px and up */
 
@@ -49,6 +51,7 @@ p {
 /**************************************************/
 /* // Large devices (desktops, 992px and up) */
 /**************************************************/
+/*
 @media (min-width: 992px) {
       body {
      background-color: burlywood;
@@ -57,25 +60,30 @@ p {
    body::before {
      content: "'lg-': lig el. over 576px.";
    }
-  /* END "lg-" 992px and up */
+   END "lg-" 992px and up
 }
+*/
 
 /**************************************************/
 /* // Extra large devices (large desktops, 1200px and up) */
 /**************************************************/
+/*
 @media (min-width: 1200px) {
     body {
      background-color: ;
    }
 
 
-  /* END "xl-" 1200px and up */
+   END "xl-" 1200px and up
 }
+*/
 
 /**************************************************/
 /* // Extra Extra large (XXL) devices (XXL screens, 1400px and up) */
 /**************************************************/
+/*
 @media (min-width: 1400px) {
 
-  /* END "xxl-" 1400px and up */
+   END "xxl-" 1400px and up
 }
+*/
